--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -2,16 +2,16 @@ Traditionally, software updates in embedded systems have been conducted by takin
 
 While the concept of dynamic software updates is not new, there have been little research on utilising DSU in embedded systems with real-time requirements. With the wide variety of microcontroller architectures and operating systems present, the challenges of implementing DSU in embedded systems are many. But this diversity also presents opportunities for developing new methods and techniques for performing DSU. One such opportunity which this project aims to investigate is the use of Ferroelectric Random-access Memory (FRAM). FRAM is a non-volatile memory technology that has the potential to outperform traditional storage such as EEPROM and Flash in such scenarios, and is further described in section \ref{sec:fram}.
 
-Previous work in the field have utilized different methods of performing the updates, such as Holmbacka et al. \cite{dynUpdateFramework} who provide a framework to perform updates by dynamically relinking FreeRTOS tasks. This approach was shown to add overhead in the magnitude of 10s of milliseconds. On the other hand, Yaacoub et al. \cite{NeRTA} present a method to schedule the dynamic updates in a manner such that real-time deadlines can be met by analysing and predicting idle processor time. They recorded a maximum idle time of just under 3ms when measuring on a low level flight controller, Hackflight \cite{hackflight}. This shows that some use cases may present overhead restrictions far lower than those measured by Holmbacka et al. and the necessity to investigate other methods for performing the update. This thesis project is inspired by the work of Yaacoub et al. and aims to investigate methods for dynamic software updates, targeting these tighter real-time deadlines. The research presents a method for performing dynamic software updates in embedded systems with real-time requirements, and evaluates the performance of the update process when utilising FRAM as the storage medium. The research is conducted on a Texas Instruments MSP430FR5969 microcontroller.
+Previous work in the field have utilized different methods of performing the updates, such as Holmbacka et al. \cite{dynUpdateFramework} who provide a framework to perform updates by dynamically relinking FreeRTOS tasks. This approach was shown to add overhead in the magnitude of 10s of milliseconds. On the other hand, Yaacoub et al. \cite{NeRTA} present a method to schedule the dynamic updates in a manner such that real-time deadlines can be met by analysing and predicting idle processor time. They recorded a maximum idle time of just under 3ms when measuring on a low level flight controller, Hackflight \cite{hackflight}. This shows that some use cases may present overhead restrictions far lower than those measured by Holmbacka et al. and the necessity to investigate other methods for performing the update. This thesis project is inspired by the work of Yaacoub et al. and aims to investigate methods for dynamic software updates, targeting these tighter real-time deadlines. The research presents a method for performing dynamic software updates in embedded systems with real-time requirements, and evaluates the performance of the update process when utilising FRAM as the storage medium. The research is conducted on a Texas Instruments MSP430FR5994 microcontroller.
 
-\subsection{Problem statement and contributions}
+\section{Problem statement and contributions}
 As described in previous sections, DSU in embedded and real-time systems is not a new concept, but there are some key aspects that are yet to be considered in the field. 
 
 Firstly; the currently existing work in the field of DSU have been focused on systems with more relaxed real-time requirements, where the overhead of the update process is not as critical. This project aims to investigate the use of DSU in systems with tighter real-time deadlines, where the overhead of the update process must be kept to a minimum.
 
 Secondly; to meet these deadlines, the utilisation of FRAM is proposed as a potential solution. FRAM is a technology that is yet to be explored in the context of DSU, and this research aims to provide insight into the potential benefits and drawbacks of using FRAM for DSU in embedded systems.
 
-\subsection{Requirements}
+\section{Requirements}
 As a way of containing the scope of the project, and to provide a clear goal for the research, the requirements of the work need to be clearly defined. There are a multitude of requirements to consider in the context of DSU, both functional and non-functional. Mlinarić describes in \cite{dsuChallenges} five key requirements for any DSU implementation, namely: \textit{Availability}, \textit{Correctness}, \textit{Flexibility}, \textit{Performance}, and \textit{Simplicity}. In addition to these general requirements for DSU, there are also requirements that are specific to the context of embedded systems, which may be considered subcategories of the above; \textit{Energy efficiency}, \textit{Memory usage}, and \textit{Security}.
 \todo{Maybe expand on these}
 
