--- a/report/sections/rel_work.tex
+++ b/report/sections/rel_work.tex
@@ -1,6 +1,6 @@
 As previously mentioned, DSU in embedded and real time systems is relatively under-represented in the literature. However, there are some studies which have investigated the topic, and some of these are discussed in this section.
 
-One study by Richter and Oriol \cite{richter2009} introduce a framework for developing DSU-friendly systems in embedded devices. Their framework is based on dividing the system into components which can be swapped out independently of one another, providing a high degree of flexibility when it comes to DSU. They also show that their framework can meet real-time deadlines as small as 3.3ms including a state transfer of a  4000 byte state.  Their approach is promising, but the processor used in the experiments is a 32-bit MPC5200 running at 396MHz, which is significantly more powerful than the MSP430FR5994 used in this research. Thus, it is not clear how the results would translate to a less powerful system with more stringent real-time requirements.
+One study by Wahler et al. \cite{dynUpdateFramework} introduce a framework for developing DSU-friendly systems in embedded devices. Their framework is based on dividing the system into components which can be swapped out independently of one another, providing a high degree of flexibility when it comes to DSU. They also show that their framework can meet real-time deadlines as small as 3.3ms including a state transfer of a  4000 byte state.  Their approach is promising, but the processor used in the experiments is a 32-bit MPC5200 running at 396MHz, which is significantly more powerful than the MSP430FR5994 used in this research. Thus, it is not clear how the results would translate to a less powerful system with more stringent real-time requirements.
 
 Another study by Kilpeläinen \cite{Kilpelainen2023} present a thorough theoretical analysis of DSU in embedded systems. They propose a method for performing DSU in systems with Flash memory, which is a common storage medium in embedded systems. Their method involves copying the page to be updated into a buffer in RAM, where the changes are applied, and then erasing and rewriting the page. The proposed solution has some similarities to the solution presented in this research, in that it utilises binary differencing (\textit{diffing}). Diffing may prove a more suitable solution for embedded systems as it is less memory intensive than component based solutions, which require multiple copies of the application to be stored in memory, at least temporarily. However, the approach presented by Kilpelainen2023 is not ideal for systems with real-time requirements, as it introduces significant time costs for the update process. The method is also not tested in a practical setting, so it is not clear how the solution would perform. 
 
