--- a/report/sources.bib
+++ b/report/sources.bib
@@ -103,16 +103,6 @@ isbn="978-3-642-26010-0"
 	url = {https://github.com/simondlevy/Hackflight}
 }
 
-@inproceedings{richter2009,
-  author = {Wahler, Michael and Richter, Stefan and Oriol, Manuel},
-  year = {2009},
-  month = {10},
-  pages = {},
-  title = {Dynamic Software Updates for Real-Time Systems.},
-  journal = {Proceedings of the 2nd International Workshop on Hot Topics in Software Upgrades, HotSWUp '09},
-  doi = {10.1145/1656437.1656440}
-}
-
 @article{dsuChallenges, 
   title={Challenges in Dynamic Software Updating}, 
   doi={10.18421/tem91-17}, 
@@ -137,4 +127,23 @@ isbn="978-3-642-26010-0"
   title             = {Naive differences of executable code},
   year              = {2003},
   url               = {https://www.daemonology.net/bsdiff/},
+}
+
+@manual{msp430Flash,
+  organization  = {Texas Instruments},
+  date          = {Revised August 2012},
+  title         = {MSP430F22x2 MSP430F22x4 Mixed-Signal Microcontrollers},
+  type          = {Datasheet},
+  year          = {2006},
+  month         = {7},
+  number        = {SLAS504G},
+}
+
+@report{framSpeed,
+  author      = {Thanigai, Priya and Goh, William},
+  date        = {June 2011},
+  institution = {Texas Instruments},
+  title       = {Maximizing Write Speed on the MSP430™ FRAM},
+  type        = {Application Report},
+  year        = {2011}
 }
